feat:configrate layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,10 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.searchInput {
+  @apply absolute;
+  top: 50%;
+  left: 5px;
+  transform: translate(0, -50%);
+}
